2000-02-26  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-adjust.c (gnc_adjust_update_cb): only update if
 	the new string is different from the old. ditto for the reconcile
	and transfer windows.

2000-02-25  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/pricecell.c (PriceHelp): print out full number for
 	help value.

	* src/register/table-allgui.c (makePassive): implement alternative
 	passive colors.

	* src/register/splitreg.h (struct _SplitRegisterColors): add color
 	for odd rows in single mode, and boolean argument determining
 	whether to alterative virtual or physical rows in double mode.

	* src/register/gnome/gnucash-sheet.c (gnucash_sheet_check_grab):
 	see if we need to release the grab.

	* src/register/splitreg.c (xaccInitSplitRegister): configure the
	mxfer cell with an ignore string (SPLIT_STR) and a help string
	explaining multi-line transactions.

	* src/register/gnome/combocell-gnome.c: added help handler and
 	ignore string functions.

	* src/register/table-allgui.c (gnc_table_enter_update): don't set
 	changed flag if new string is identical.

2000-02-24  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/table-gnome.c (xaccRefreshTableGUI): redo the style
 	information so that new colors (and other info) get refreshed.

	* src/register/gnome/gnucash-header.c (gnucash_header_draw): use
 	header style color to draw header background.

	* src/gnome/option-util.c: new functions to support color options.

	* src/gnome/dialog-options.c: gui implementation of color options.

	* src/scm/report/hello-world.scm: used the new color option.

	* src/scm/options.scm: added a new color option.

2000-02-23  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/extensions.scm (gnc:new-menu-namer): new object that
 	automatically picks accelerator keys for a group of menu items.

2000-02-22  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/gnome/gnucash-sheet.c (gnucash_sheet_delete_cb):