@@ -1,3 +1,11 @@
+2000-02-27  Dave Peticolas  <peticola@cs.ucdavis.edu>
+
+	* src/gnome/dialog-transfer.c (gnc_xfer_dialog_create): use
+ 	gnc_localconv to get the currency symbol.
+
+	* src/gnome/window-adjust.c (adjBWindow): put colons after label.
+  	Use gnc_localeconv to get the currency symbol.
+
 2000-02-26  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
 	* src/gnome/window-adjust.c (gnc_adjust_update_cb): only update if
